--- a/eureka.properties
+++ b/eureka.properties
@@ -5,10 +5,22 @@ eureka.client.register-with-eureka=false
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8887/eureka/,http://localhost:8888/eureka
 
-#¸ÃÎ¢·şÎñÔÚeurekaÉÏµÄÏÔÊ¾Ãû
+#è¯¥å¾®æœåŠ¡åœ¨eurekaä¸Šçš„æ˜¾ç¤ºå
 eureka.instance.instance-id=${spring.cloud.client.ipaddress}:${spring.application.name}:${server.port}
-#·ÃÎÊÂ·¾¶¿ÉÒÔÊ¹ÓÃIPµØÖ·
+#è®¿é—®è·¯å¾„å¯ä»¥ä½¿ç”¨IPåœ°å€
 eureka.instance.prefer-ip-address= true
 
-#¹Ø±Õ×ÔÎÒ±£»¤
+#å…³é—­è‡ªæˆ‘ä¿æŠ¤
 eureka.server.enable-self-preservation=false
+
+
+
+
+
+
+#æ¶ˆæ¯é˜Ÿåˆ—çš„é“¾æ¥é…ç½®
+spring.rabbitmq.host=192.168.233.132
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=1111
+spring.rabbitmq.virtual-host=/
